--- a/LSM/Content/Site.css
+++ b/LSM/Content/Site.css
@@ -71,10 +71,10 @@ table, th, td {
     color: white;
 }
 
-#tableCourseInfo {
+/*#tableCourseInfo {
 
     display: none;
-}
+}*/
 
 /*footer {
     position: absolute;
