--- a/LSM/Views/Student/Index.cshtml
+++ b/LSM/Views/Student/Index.cshtml
@@ -24,12 +24,12 @@
     <h1>Course: @Model.Name</h1>
     <div class="row">
         <div class="col-md-6">
-            <div class="btn-group">
+            @*<div class="btn-group">
                 <button class="btn btn-primary active" id="buttonSchedule">Schedule this week</button>
                 <button class="btn btn-primary" id="buttonCourseInfo">Course Info</button>
 
-            </div>
-            <div id="tableSchedule">
+            </div>*@
+            @*<div id="tableSchedule">
                 <h3>Schedule this week</h3>
                 <table class="table">
                     <tr>
@@ -64,7 +64,7 @@
 
 
                 </table>
-            </div>
+            </div>*@
             <div id="tableCourseInfo">
                 <h3>Course Info</h3>
                 <p><strong>Start Date: @Model.StartDate Stop Date: @Model.StopDate</strong></p>
