--- a/LSM/Views/Courses/Index.cshtml
+++ b/LSM/Views/Courses/Index.cshtml
@@ -26,6 +26,7 @@
     }
 }
 
+
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page">Home</li>
@@ -40,37 +41,41 @@
 <p>
     @Html.ActionLink("Add new Course", "Create", new { id = "" }, new { @class = "btn btn-success" })
 </p>
-<table class="table">
-    <tr>
-        <th>View/Edit</th>
-        <th>Start</th>
-        <th>End</th>
-        <th>Modules</th>
-        <th>Students</th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-    <tr>
-        <td>
-            @Html.ActionLink(item.Name, "Edit", new { id = item.Id }, new { @class = "btn  btn-info" })
-        </td>
-        <td>
-            @item.StartDate.ToShortDateString()
-        </td>
-        <td>
-            @item.StopDate.ToShortDateString()
-        </td>
-        <td>
-            @item.Modules.Count()
-        </td>
-        <td >
-            @item.Users.Count()
-        </td>
-    </tr>
-    }
-
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>View/Edit</th>
+            <th>Start</th>
+            <th>End</th>
+            <th>Modules</th>
+            <th>Students</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(item.Name, "Edit", new { id = item.Id }, new { @class = "btn  btn-info" })
+                </td>
+                <td>
+                    @item.StartDate.ToShortDateString()
+                </td>
+                <td>
+                    @item.StopDate.ToShortDateString()
+                </td>
+                <td>
+                    @item.Modules.Count()
+                </td>
+                <td>
+                    @item.Users.Count()
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
+
+
 
 @section Scripts {
     @Scripts.Render("~/Scripts/ScriptforLSM.js")
