--- a/LSM/Views/Shared/_LoginPartial.cshtml
+++ b/LSM/Views/Shared/_LoginPartial.cshtml
@@ -8,10 +8,10 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-            @*@if (User.IsInRole("Teacher"))
+            @if (User.IsInRole("Teacher"))
             {
                 <li>@Html.ActionLink("Register Teacher", "Register", "Account", routeValues: new { Teacher = true }, htmlAttributes: new { id = "registerLink" })</li>
-            }*@
+            }
             <li>
                 @Html.ActionLink("You are logged in as " + User.Identity.GetUserName() + ".", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
