--- a/LSM/Views/Account/Register.cshtml
+++ b/LSM/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item">@Html.ActionLink("Home", "Index", "Home")</li>
+        <li class="breadcrumb-item">@Html.ActionLink("Courses", "Index", "Home")</li>
         @if (ViewBag.CourseName == "Teacher")
     {
         <li class="breadcrumb-item active" aria-current="page">Register Teacher</li>
