--- a/LSM/Views/Courses/Create.cshtml
+++ b/LSM/Views/Courses/Create.cshtml
@@ -13,13 +13,18 @@
 </nav>
 
 <h1>Add new Course</h1>
+<div class="panel panel-default">
+    <div class="panel-body panel-collapse">Panel Content</div>
+    <div class="panel-footer">Panel Footer</div>
+</div>
+
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Course</h4>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-horizontal panel panel-default">      
+        @Html.ValidationSummary(true, "hej", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
