--- a/LSM/Views/Student/Index.cshtml
+++ b/LSM/Views/Student/Index.cshtml
@@ -24,47 +24,48 @@
     <h1>Course: @Model.Name</h1>
     <div class="row">
         <div class="col-md-6">
-            @*<div class="btn-group">
+            <div class="btn-group">
                 <button class="btn btn-primary active" id="buttonSchedule">Schedule this week</button>
                 <button class="btn btn-primary" id="buttonCourseInfo">Course Info</button>
 
-            </div>*@
-            @*<div id="tableSchedule">
+            </div>
+            <div id="tableSchedule">
                 <h3>Schedule this week</h3>
-                <table class="table">
-                    <tr>
-                        <th>View</th>
-                        <th>Date</th>
-                        <th>Pass</th>
-                    </tr>
-
-                    @foreach (var item in ActivityListNow)
-        {
-            <tr>
-                <td>@Html.ActionLink(@item.Name, "Activity", "Student", new { id = item.Id }, new { @class = "btn  btn-info" })</td>
-                <td>@item.Day</td>
-                <td>
-                    @if (item.Pass == LSM.Models.Epass.FM)
-        {<p>Morning</p>
-}
-                    @if (item.Pass == LSM.Models.Epass.EM)
-        {<p>Afternoon</p>
-}
-                    @if (item.Pass == LSM.Models.Epass.FMEM)
-        {
-            <p>Full day</p>
-}
-                </td>
-            </tr>
-
-
-}
-
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>View</th>
+                            <th>Date</th>
+                            <th>Pass</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in ActivityListNow)
+                        {
+                            <tr>
+                                <td>@Html.ActionLink(@item.Name, "Activity", "Student", new { id = item.Id }, new { @class = "btn  btn-info" })</td>
+                                <td>@item.Day</td>
+                                <td>
+                                    @if (item.Pass == LSM.Models.Epass.FM)
+                                    {<p>Morning</p>
+                                    }
+                                    @if (item.Pass == LSM.Models.Epass.EM)
+                                    {<p>Afternoon</p>
+                                    }
+                                    @if (item.Pass == LSM.Models.Epass.FMEM)
+                                    {
+                                        <p>Full day</p>
+                                    }
+                                </td>
+                            </tr>
 
 
+                        }
 
+
+                    </tbody>
                 </table>
-            </div>*@
+            </div>
             <div id="tableCourseInfo">
                 <h3>Course Info</h3>
                 <p><strong>Start Date: @Model.StartDate Stop Date: @Model.StopDate</strong></p>
