--- a/LSM/Views/Activities/Create.cshtml
+++ b/LSM/Views/Activities/Create.cshtml
@@ -6,7 +6,7 @@
 
 @{
     ViewBag.Title = "Create";
-    string moduleName = @ViewBag.Module.Name;
+    string moduleName = @ViewBag.Module.Name;Fix
     int moduleId = @ViewBag.Module.Id;
 
     Module module = @ViewBag.Module;
