--- a/LSM/Views/Modules/Create.cshtml
+++ b/LSM/Views/Modules/Create.cshtml
@@ -5,13 +5,14 @@
 @{
     ViewBag.Title = "Create";
 
-    Course course = ViewBag.Course;
+    string courseName = ViewBag.courseName;
+    int courseId = ViewBag.courseId;
 }
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">@Html.ActionLink("Home ", "Index", "Courses")</li>
-        <li class="breadcrumb-item">@Html.ActionLink("Course: " + course.Name, "Edit", "Courses", new { id = course.Id }, new { @class = "breadcrum-text" })</li>
+        <li class="breadcrumb-item">@Html.ActionLink("Course: " + courseName, "Edit", "Courses", new { id = courseId }, new { @class = "breadcrum-text" })</li>
         <li class="breadcrumb-item active" aria-current="page">@ViewBag.Title module</li>
     </ol>
 </nav>
