Changes to models and views

--- a/LSM/Views/Courses/Edit.cshtml
+++ b/LSM/Views/Courses/Edit.cshtml
@@ -64,9 +64,9 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2"})
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { type="date", @class = "form-control", rows = 15 } })
+                            @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { type="date", @class = "form-control", rows = 15, required = true } })
                             @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
                         </div>
                     </div>
