--- a/LSM/Views/Courses/Create.cshtml
+++ b/LSM/Views/Courses/Create.cshtml
@@ -56,6 +56,8 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Add new Course" class="btn btn-success" />
+                @Html.ActionLink("Cancel", "Index", new { id = 0 }, new {@class="btn btn-success"})
+
             </div>
         </div>
     </div>
