--- a/LSM/Views/Modules/Create.cshtml
+++ b/LSM/Views/Modules/Create.cshtml
@@ -62,7 +62,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-success" />
-                @Html.ActionLink("Cancel", "Edit", "Courses", new { id = ViewBag.CourseForModule }, new { @class = "btn btn-info" })
+                @Html.ActionLink("Cancel", "Edit", "Courses", new { id = courseId }, new { @class = "btn btn-info" })
 
             </div>
         </div>
