--- a/LSM/Views/Activities/Create.cshtml
+++ b/LSM/Views/Activities/Create.cshtml
@@ -76,8 +76,8 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-success" />
-            @Html.ActionLink("Cancel", "Edit", "Modules", new { id = moduleId }, new { @class = "btn btn-info" })
+            <input type="submit" value="Create" class="btn button-design" />
+            @Html.ActionLink("Cancel", "Edit", "Modules", new { id = moduleId }, new { @class = "btn button-design" })
         </div>
     </div>
 </div>
