--- a/LSM/Views/Modules/Delete.cshtml
+++ b/LSM/Views/Modules/Delete.cshtml
@@ -59,8 +59,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" />
-            @Html.ActionLink("Cancel", "Edit", new { id = Model.Id }, new { @class = "btn btn-info" })
+            <input type="submit" value="Delete" class="btn button-design" />
+            @Html.ActionLink("Cancel", "Edit", new { id = Model.Id }, new { @class = "btn button-design" })
         </div>
     }
 </div>
