--- a/LSM/Views/Student/Module.cshtml
+++ b/LSM/Views/Student/Module.cshtml
@@ -39,7 +39,7 @@
                             {
                                 <tr>
                                     <td>
-                                        @Html.ActionLink(item.Name, "Activity", "Student", new { id = item.Id }, new { @class = "btn btn-info" })
+                                        @Html.ActionLink(item.Name, "Activity", "Student", new { id = item.Id }, new { @class = "btn button-design" })
                                     </td>
                                     <td>
                                         @item.Day
