--- a/LSM/Views/Account/Register.cshtml
+++ b/LSM/Views/Account/Register.cshtml
@@ -77,16 +77,16 @@ else {
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-success" value="Register" />
+            <input type="submit" class="btn button-design" value="Register" />
 
             @if (ViewBag.CourseName == "Teacher")
             {
-                @Html.ActionLink("Cancel", "Index", "Courses", new { id = 0 }, new { @class = "btn btn-info" })
+                @Html.ActionLink("Cancel", "Index", "Courses", new { id = 0 }, new { @class = "btn button-design" })
             }
             else
             {
                 int CourseId = ViewBag.CourseId;
-                @Html.ActionLink("Cancel", "Edit", "Courses", new { id = CourseId }, new { @class = "btn btn-info" })
+                @Html.ActionLink("Cancel", "Edit", "Courses", new { id = CourseId }, new { @class = "btn button-design" })
              }
 
          </div>     
