--- a/LSM/Views/Activities/Delete.cshtml
+++ b/LSM/Views/Activities/Delete.cshtml
@@ -78,8 +78,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" />
-            @Html.ActionLink("Cancel", "Edit", new { id = Model.Id }, new { @class = "btn btn-info" })
+            <input type="submit" value="Delete" class="btn button-design" />
+            @Html.ActionLink("Cancel", "Edit", new { id = Model.Id }, new { @class = "btn button-design" })
 
 
         </div>
