--- a/LSM/Views/Activities/Edit.cshtml
+++ b/LSM/Views/Activities/Edit.cshtml
@@ -62,8 +62,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-success" />
-                @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
+                <input type="submit" value="Save" class="btn button-design" />
+                @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn button-design" })
             </div>
         </div>
     </div>
