--- a/LSM/Views/Courses/Edit.cshtml
+++ b/LSM/Views/Courses/Edit.cshtml
@@ -26,7 +26,7 @@
 <h1>Course: @Model.Name</h1>
 @if (!(ViewBag.Message == "None"))
 {
-<div id="message2" class="green"><p>@messagetosend</p></div>
+    <div id="message2" class="green"><p>@messagetosend</p></div>
 }
 <div class="container">
 
@@ -37,9 +37,7 @@
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
-
-
-
+                               
                 <div class="form-horizontal">
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -63,9 +61,9 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2"})
+                        @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { type="date", @class = "form-control", rows = 15, required = true } })
+                            @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { type = "date", @class = "form-control", rows = 15, required = true } })
                             @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -80,8 +78,8 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Save" class="btn btn-success" />
-                            @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
+                            <input type="submit" value="Save Changes" class="btn button-design" />
+                            @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn button-design" })
 
                         </div>
                     </div>
@@ -93,17 +91,17 @@
         </div>
         <div class="col-md-6">
             <div class="btn-group">
-                <button class="btn btn-primary active" id="buttonModules">Modules</button>
-                <button class="btn btn-primary" id="buttonStudents">Students</button>
+                <button class="btn button-design active" id="buttonModules">Modules</button>
+                <button class="btn button-design" id="buttonStudents">Students</button>
             </div>
 
 
 
             <div id="tableModules">
-                @Html.ActionLink("Add new module", "Create", "Modules", new { CourseId = Model.Id }, new { @class = "btn btn-success" })
+                @Html.ActionLink("Add new module", "Create", "Modules", new { CourseId = Model.Id }, new { @class = "btn button-design" })
                 <div class="table_div">
                     <table class="table">
-                       <thead>
+                        <thead>
                             <tr>
                                 <th>View/Edit</th>
                                 <th>Start</th>
@@ -114,7 +112,7 @@
                             @foreach (var item in Model.Modules.ToList())
                             {
                                 <tr>
-                                    <td>@Html.ActionLink(@item.Name, "Edit", "Modules", new { id = item.Id }, new { @class = "btn  btn-info" })</td>
+                                    <td>@Html.ActionLink(@item.Name, "Edit", "Modules", new { id = item.Id }, new { @class = "btn  button-design" })</td>
                                     <td>@item.StartDate.ToShortDateString()</td>
                                     <td>@item.StopDate.ToShortDateString()</td>
                                 </tr>
@@ -127,12 +125,12 @@
                 </div>
             </div>
             <div id="tableStudents">
-                @Html.ActionLink("Add new student", "Register", "Account", new { CourseId = Model.Id, Teacher = false }, new { @class = "btn btn-success" })
+                @Html.ActionLink("Add new student", "Register", "Account", new { CourseId = Model.Id, Teacher = false }, new { @class = "btn button-design" })
                 <div class="table_div">
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>View/Edit</th>
+                                <th>Name</th>
                                 <th>Email</th>
                             </tr>
                         </thead>
@@ -140,7 +138,6 @@
                             @foreach (var item in Model.Users)
                             {
                                 <tr>
-                                    @*<td>@Html.ActionLink(@item.FullName, "Edit", "Account", new { id = item.Id }, new { @class = "btn  btn-info" })</td>*@
                                     <td>@item.FullName</td>
                                     <td>@item.Email</td>
                                 </tr>
