--- a/LSM/Views/Courses/Index.cshtml
+++ b/LSM/Views/Courses/Index.cshtml
@@ -24,35 +24,35 @@
     <div id="message2" class="green"><p>@messagetosend</p></div>
 }
 <p>
-    @Html.ActionLink("Add new Course", "Create", new { id = "" }, new { @class = "btn btn-success" })
+    @Html.ActionLink("Add new Course", "Create", new { id = "" }, new { @class = "btn button-design" })
 </p>
-<table class="table table-striped">  
+<table class="table table-striped responive" id="coursetable">
     <thead>
         <tr>
-            <th>View/Edit</th>
-            <th>Start</th>
-            <th>End</th>
-            <th>Modules</th>
-            <th>Students</th>
+            <th scope="col">View/Edit</th>
+            <th scope="col">Start</th>
+            <th scope="col">End</th>
+            <th scope="col">Modules</th>
+            <th scope="col">Students</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td>
-                  @Html.ActionLink(item.Name, "Edit", new { id = item.Id }, new { @class = "btn  btn-info" })
+                <td data-table-header="View/Edit">
+                    @Html.ActionLink(item.Name, "Edit", new { id = item.Id }, new { @class = "btn button-design" })
                 </td>
-                <td>
+                <td data-table-header="Start">
                     @item.StartDate.ToShortDateString()
                 </td>
-                <td>
+                <td data-table-header="End">
                     @item.StopDate.ToShortDateString()
                 </td>
-                <td>
+                <td data-table-header="Students">
                     @item.Modules.Count()
                 </td>
-                <td>
+                <td data-table-header="View/Edit">
                     @item.Users.Count()
                 </td>
             </tr>
@@ -62,6 +62,7 @@
 
 
 
-@section Scripts {
-    @Scripts.Render("~/Scripts/ScriptforLSM.js")
-}
+
+@*@section Scripts {
+        @Scripts.Render("~/Scripts/ScriptforLSM.js")
+    }*@
