--- a/LSM/Views/Modules/Create.cshtml
+++ b/LSM/Views/Modules/Create.cshtml
@@ -61,8 +61,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-success" />
-                @Html.ActionLink("Cancel", "Edit", "Courses", new { id = courseId }, new { @class = "btn btn-info" })
+                <input type="submit" value="Create" class="btn button-design" />
+                @Html.ActionLink("Cancel", "Edit", "Courses", new { id = courseId }, new { @class = "btn button-design" })
 
             </div>
         </div>
